--- a/index.html
+++ b/index.html
@@ -5,17 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto inicial</title>
-</head>
-<body>
-    <h1>Projeto inical de DSA2</h1>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+</head>
+
+<body class="container-fluid">
+    <h1>Projeto inical de DSA2</h1>
     <div>
         <h4>DSA2</h4>
-        <label>Digite seu nome:</label>
+        <form>
+            <div class="mb-1">
+                <label>Digite seu nome:</label>
         <input type="text" id="nome" placeholder="Digite aqui seu nome..">
-        <input type="button" id="botao" value="Clique aqui.....">
+            </div>
+            <div class="mb-1">
+                <label>Digite seu email:</label>
+        <input type="text" id="email" placeholder="Digite aqui seu email..">
+            </div>
+            <div class="mb-1">
+                <label>Digite seu telefone:</label>
+        <input type="text" id="telefone" placeholder="Digite aqui seu telefone..">
+            </div>
+            <div class="mb-1">
+                <label>Digite seu cep:</label>
+        <input type="text" id="cep" placeholder="Digite aqui seu cep..">
+            </div>
+            <div class="mb-1">
+                <label>Digite seu lagradouro:</label>
+        <input type="text" id="lagradouro" placeholder="Digite aqui seu lagradouro..">
+            </div>
+            <div class="mb-1">
+                <label>Digite seu numero:</label>
+        <input type="text" id="numero" placeholder="Digite aqui seu numero..">
+            </div>
+            <div class="mb-1">
+                <label>Digite seu complemento:</label>
+        <input type="text" id="complemento" placeholder="Digite aqui seu complemento..">
+            </div>
+            <div class="mb-1">
+                <label>Digite seu bairro:</label>
+        <input type="text" id="bairro" placeholder="Digite aqui seu bairro..">
+            </div>
+            <div class="mb-1">
+                <label>Digite seu cidade:</label>
+        <input type="text" id="cidade" placeholder="Digite aqui seu cidade..">
+            </div>
+            <div class="mb-1">
+                <label>Digite seu estado:</label>
+        <input type="text" id="estado" placeholder="Digite aqui seu estado..">
+            </div>
+        <input type="button" id="botao" 
+        class="btn-primary" value="Clique aqui.....">
+    </form>
+    <div class="m-2 p-1 text-center" id="saida-de-dados">
+
+    </div>
     </div>
     <script src="./scripts.js"></script>
-    
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
